--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 23:43+0200\n"
+"PO-Revision-Date: 2011-08-15 23:45+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -9513,10 +9513,9 @@ msgid "Run analyzer"
 msgstr "Ejecutar analizador"
 
 #: server_status.php:801
-#, fuzzy
 #| msgid "Introduction"
 msgid "Instructions"
-msgstr "Introducción"
+msgstr "Instrucciones"
 
 #: server_status.php:808
 msgid ""
