Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 23:48+0200\n"
+"PO-Revision-Date: 2011-08-15 23:49+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -9532,8 +9532,8 @@ msgid ""
 "system."
 msgstr ""
 "Notar, sin embargo, que este sistema provee recomendaciones basadas en "
-"cálculos simples y reglas generales que no necesariamente sean válidas en su "
-"sistema."
+"cálculos simples y reglas generales que no serán necesariamente válidas en "
+"su sistema."
 
 #: server_status.php:812
 msgid ""
