--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 23:50+0200\n"
+"PO-Revision-Date: 2011-08-15 23:51+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -10435,10 +10435,9 @@ msgstr ""
 "utilizar las funcionalidades para graficación del servidor."
 
 #: server_status.php:1507
-#, fuzzy
 #| msgid "Pause monitor"
 msgid "Using the monitor:"
-msgstr "Pausar monitorización"
+msgstr "Usando el monitorizador:"
 
 #: server_status.php:1509
 #, fuzzy
