Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 23:51+0200\n"
+"PO-Revision-Date: 2011-08-15 23:52+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -10463,7 +10463,6 @@ msgstr ""
 "dentada en cada gráfico."
 
 #: server_status.php:1511
-#, fuzzy
 #| msgid ""
 #| "<b>Using the monitor:</b><br/> Ok, you are good to go! Once you click "
 #| "'Start monitor' your browser will refresh all displayed charts in a "
@@ -10480,16 +10479,11 @@ msgid ""
 "confirmed, this will load a table of grouped queries, there you may click on "
 "any occuring SELECT statements to further analyze them."
 msgstr ""
-"<b>Utilizando el monitorizador:</b><br /> ¡Ya está listo! Una vez que pulse "
-"en 'Iniciar monitorización' el navegador actualizará a intervalos regulares "
-"todos los gráficos mostrados. Puede agregar gráficos y cambiar la velocidad "
-"de actualización en la sección 'Configuración' o eliminar cualquier gráfico "
-"utilizando el icono de rueda dentada en cada gráfico. <p>Para mostrar las "
-"consultas de los registros, seleccione el intervalo de tiempo "
-"correspondiente en cualquier gráfico manteniendo pulsado el botón izquierdo "
-"y arrastrando sobre el gráfico. Una vez confirmado, esto cargará una tabla "
-"de consultas agrupadas donde podrá pulsar en cualquier sentencia SELECT para "
-"analizarla.</p>"
+"Para mostrar las consultas de los registros, seleccione el intervalo de "
+"tiempo correspondiente en cualquier gráfico manteniendo pulsado el botón "
+"izquierdo y arrastrando sobre el gráfico. Una vez confirmado, esto cargará "
+"una tabla de consultas agrupadas donde podrá pulsar en cualquier sentencia "
+"SELECT para analizarla."
 
 #: server_status.php:1518
 msgid "Please note:"
