--- a/po/es.po
+++ b/po/es.po
@@ -10487,7 +10487,7 @@ msgstr ""
 
 #: server_status.php:1518
 msgid "Please note:"
-msgstr ""
+msgstr "Notar que:"
 
 #: server_status.php:1520
 #, fuzzy
