--- a/po/es.po
+++ b/po/es.po
@@ -10490,7 +10490,6 @@ msgid "Please note:"
 msgstr "Notar que:"
 
 #: server_status.php:1520
-#, fuzzy
 #| msgid ""
 #| "<b>Please note:</b> Enabling the general_log may increase the server load "
 #| "by 5-15%. Also be aware that generating statistics from the logs is a "
@@ -10503,12 +10502,11 @@ msgid ""
 "it is advisable to select only a small time span and to disable the "
 "general_log and empty its table once monitoring is not required any more."
 msgstr ""
-"<b>Notar que:</b> Activar «general_log» puede aumentar la carga en el "
-"servidor hasta un 5-15%. También esté al tanto que generar estadísticas de "
-"los registros es una tarea muy intensiva por lo que se recomienda "
-"seleccionar un período de tiempo lo más pequeño posible y desactivar "
-"«general_log» y vaciar sus tablas una vez que ya no se necesite "
-"monitorizar.        "
+"Activar «general_log» puede aumentar la carga en el servidor hasta un 5-15%. "
+"También esté al tanto que generar estadísticas de los registros es una "
+"tarea muy intensiva por lo que se recomienda seleccionar un período de "
+"tiempo lo más pequeño posible y desactivar «general_log» y vaciar sus tablas "
+"una vez que ya no se necesite monitorizar.        "
 
 #: server_status.php:1533
 #, fuzzy
