Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 23:43+0200\n"
+"PO-Revision-Date: 2011-08-15 23:52+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -4473,6 +4473,9 @@ msgid ""
 "This configuration make sure that we only keep N (N = MaxTableUiprefs) "
 "newest record in \"table_uiprefs\" and automatically delete older records"
 msgstr ""
+"Bu yapılandırma \"table_uiprefs\" içinde sadece N (N = MaxTableUiprefs) en "
+"yeni kayıtları tutuğumuzdan ve otomatik olarak eski kayıtları sildiğimizden "
+"emin olur"
 
 #: libraries/config/messages.inc.php:399
 #| msgid "Maximum number of tables displayed in table list"
