--- a/po/es.po
+++ b/po/es.po
@@ -11742,10 +11742,11 @@ msgid "Create version"
 msgstr "Crear versión"
 
 #: tbl_zoom_select.php:140
-#, fuzzy
 #| msgid "Do a \"query by example\" (wildcard: \"%\")"
 msgid "Do a \"query by example\" (wildcard: \"%\") for two different columns"
-msgstr "Hacer una \"consulta basada en ejemplo\" (comodín: \"%\")"
+msgstr ""
+"Hacer una \"consulta basada en ejemplo\" (comodín: \"%\") para dos columnas "
+"distintas"
 
 #: tbl_zoom_select.php:151
 #, fuzzy
