--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 23:54+0200\n"
+"PO-Revision-Date: 2011-08-15 23:55+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -11765,7 +11765,7 @@ msgstr "Máximo número de filas a graficar"
 
 #: tbl_zoom_select.php:388
 msgid "Browse/Edit the points"
-msgstr ""
+msgstr "Navegar/editar los puntos"
 
 #: tbl_zoom_select.php:394
 #, fuzzy
