--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 23:52+0200\n"
+"PO-Revision-Date: 2011-08-15 23:55+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -11565,7 +11565,7 @@ msgstr "Çizim için en fazla satır"
 
 #: tbl_zoom_select.php:388
 msgid "Browse/Edit the points"
-msgstr ""
+msgstr "Noktalara gözat/düzenle"
 
 #: tbl_zoom_select.php:394
 #| msgid "Control user"
