Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 23:55+0200\n"
+"PO-Revision-Date: 2011-08-15 23:56+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -11768,10 +11768,9 @@ msgid "Browse/Edit the points"
 msgstr "Navegar/editar los puntos"
 
 #: tbl_zoom_select.php:394
-#, fuzzy
 #| msgid "Control user"
 msgid "How to use"
-msgstr "Controlar al usuario"
+msgstr "Forma de utilización"
 
 #: themes.php:28
 msgid "Get more themes!"
