--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-15 23:55+0200\n"
+"PO-Revision-Date: 2011-08-15 23:56+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -11901,7 +11901,7 @@ msgstr "Sorgu önbelleği verimi (%)"
 
 #: po/advisory_rules.php:76
 msgid "Query cache not running efficiently, it has a low hit rate."
-msgstr ""
+msgstr "Sorgu önbelleği verimli çalışmıyor, düşük tavan oranına sahip."
 
 #: po/advisory_rules.php:77
 msgid "Consider increasing {query_cache_limit}."
