Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -11833,7 +11833,7 @@ msgstr ""
 #: po/advisory_rules.php:8
 #, php-format
 msgid "The uptime is only %s"
-msgstr ""
+msgstr "El tiempo de actividad es sólo %s"
 
 #: po/advisory_rules.php:10
 #, fuzzy
