--- a/po/es.po
+++ b/po/es.po
@@ -11857,10 +11857,10 @@ msgstr ""
 "consultas."
 
 #: po/advisory_rules.php:13
-#, fuzzy, php-format
+#, php-format
 #| msgid "Current connection"
 msgid "Current amount of Questions: %s"
-msgstr "Conexión actual"
+msgstr "Cantidad de consultas actuales: %s"
 
 #: po/advisory_rules.php:15
 #, fuzzy
