--- a/po/es.po
+++ b/po/es.po
@@ -11905,6 +11905,8 @@ msgid ""
 "You have a slow query rate of %s per hour, you should have less than 1%% per "
 "hour."
 msgstr ""
+"Hay una frecuencia de consultas lentas de %s por hora, debería de tener "
+"menos de 1%% por hora."
 
 #: po/advisory_rules.php:25
 #, fuzzy
