--- a/po/es.po
+++ b/po/es.po
@@ -11918,6 +11918,8 @@ msgid ""
 "long_query_time is set to 10 seconds or more, thus only slow queries that "
 "take above 10 seconds are logged."
 msgstr ""
+"«long_query_time» está configurado a 10 segundos o más, por lo que sólo "
+"aquellas consultas que tomen más 10 segundos serán registradas."
 
 #: po/advisory_rules.php:27
 msgid ""
