--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 09:21+0200\n"
+"PO-Revision-Date: 2011-08-16 09:27+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -12108,7 +12108,7 @@ msgstr ""
 
 #: po/advisory_rules.php:131
 msgid "The rate of reading data from a fixed position is high."
-msgstr ""
+msgstr "決まった位置のデータを読み込む割合が高いです。"
 
 #: po/advisory_rules.php:132
 msgid ""
