Translation update done using Pootle.

--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 09:43+0200\n"
+"PO-Revision-Date: 2011-08-16 09:48+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -12142,7 +12142,7 @@ msgstr "テーブルの行リンクを表示する場所"
 msgid ""
 "This indicates that many queries are doing full table scans. Add indexes "
 "where applicable."
-msgstr ""
+msgstr "多くのクエリがテーブルの全スキャンを行っていることを示しています。該当箇所にインデックスを追加してください。"
 
 #: po/advisory_rules.php:138
 #, php-format
