--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 09:51+0200\n"
+"PO-Revision-Date: 2011-08-16 09:54+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -12147,7 +12147,7 @@ msgstr "多くのクエリがテーブルの全スキャンを行っているこ
 #, php-format
 msgid ""
 "Rate of reading next table row: %s, this value should be less than 1 per hour"
-msgstr ""
+msgstr "テーブルの次行を読み込む割合：%s。推奨値は、1 時間当たり 1 未満です。"
 
 #: po/advisory_rules.php:140
 msgid "tmp_table_size vs. max_heap_table_size"
