--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 10:11+0200\n"
+"PO-Revision-Date: 2011-08-16 10:12+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -12406,7 +12406,7 @@ msgstr ""
 
 #: po/advisory_rules.php:203
 msgid "The thread cache is set to 0"
-msgstr ""
+msgstr "スレッドキャッシュは 0 に設定されています。"
 
 #: po/advisory_rules.php:205
 #, fuzzy, php-format
