--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 15:42+0200\n"
+"PO-Revision-Date: 2011-08-16 15:44+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -12310,8 +12310,8 @@ msgid ""
 "Opening tables requires disk I/O which is costly. Increasing "
 "{table_open_cache} might avoid this."
 msgstr ""
-"テーブルを開くことは、コストがかかるディスクへの入出力を必要とします。{table_open_cache} "
-"大きくすることで、これを緩和できることがあります。"
+"テーブルを開くことは、負荷がかかるディスクへの入出力を必要とします。{table_open_cache} "
+"を大きくすることで、これを緩和できることがあります。"
 
 #: po/advisory_rules.php:178
 #, php-format
