Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 15:55+0200\n"
+"PO-Revision-Date: 2011-08-16 15:59+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -9395,6 +9395,10 @@ msgid ""
 "changing (by reading the documentation) and how to undo the change. Wrong "
 "tuning can have a very negative effect on performance."
 msgstr ""
+"Yapılandırmanın herhangi bir yerini değiştirmeden önce, neyi "
+"değiştirdiğinizi bildiğinizden (belgeyi okuyarak) ve değişikliği nasıl geri "
+"alacağınızdan emin olun. Yanlış ayarlama performansa çok olumsuz etki "
+"edebilir."
 
 #: server_status.php:814
 msgid ""
