--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 15:59+0200\n"
+"PO-Revision-Date: 2011-08-16 16:03+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -9406,6 +9406,9 @@ msgid ""
 "time, observe or benchmark your database, and undo the change if there was "
 "no clearly measurable improvement."
 msgstr ""
+"Sisteminizi ayarlamanın en iyi yolu bir defada sadece bir değişiklik yapmak, "
+"gözlemlemek, veritabanınızı kıyaslamak ve eğer açıkça ölçülebilir bir "
+"gelişme olmadıysa, değişikliği geri almak olacaktır."
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: server_status.php:836
